--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,8 @@
   }
 .movie-card:hover{
 cursor: pointer;
+transform: scale(1.05);
+transition:0.2s;
 }
 .movie-card:active{
 transform:scale(0.9);
